--- a/index.html
+++ b/index.html
@@ -1055,209 +1055,200 @@
 
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinstar">
     <span class="saat">19:00</span>
-    <span class="takimlar">Antalyaspor - Galatasaray</span>
+    <span class="takimlar">Kasımpaşa - Fenerbahçe</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinstar">
     <span class="saat">16:00</span>
-    <span class="takimlar">Ankaragücü - Kayserispor</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinstar">
-    <span class="saat">13:30</span>
-    <span class="takimlar">Pendikspor - Sivasspor</span>
+    <span class="takimlar">Beşiktaş - İstanbulspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb2">
     <span class="saat">19:00</span>
-    <span class="takimlar">Başakşehir - Gaziantep FK</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb2">
-    <span class="saat">13:30</span>
-    <span class="takimlar">Bandırmaspor - Çorum FK</span>
+    <span class="takimlar">Hatayspor - Konyaspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb2">
     <span class="saat">16:00</span>
-    <span class="takimlar">Şanlıurfaspor - Gençlerbirliği</span>
+    <span class="takimlar">Boluspor - Göztepe</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm1">
-    <span class="saat">11:30</span>
-    <span class="takimlar">E.Rybakina - L.Samsonova</span>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb2">
+    <span class="saat">13:30</span>
+    <span class="takimlar">Ç.Rizespor - Samsunspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb5">
     <span class="saat">13:00</span>
-    <span class="takimlar">Bahçeşehir Klj - Petkimspor</span>
+    <span class="takimlar">Galatasaray NEF - Manisa BB</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayintv85">
+    <span class="saat">13:15</span>
+    <span class="takimlar">Zwolle - Feyenoord</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss2">
+    <span class="saat">13:30</span>
+    <span class="takimlar">Monza - Salernitana</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm1">
     <span class="saat">13:30</span>
-    <span class="takimlar">Manisa FK - Sakaryaspor</span>
+    <span class="takimlar">Keçiörengücü - Tuzlaspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint1">
     <span class="saat">13:30</span>
-    <span class="takimlar">C.Alcaraz - G.Barrere</span>
+    <span class="takimlar">J.Sinner - S.Baez</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint2">
-    <span class="saat">14:00</span>
-    <span class="takimlar">Greuther Fürth - Hansa Rostock</span>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinsmarts">
+    <span class="saat">13:30</span>
+    <span class="takimlar">Barcelona - MoraBanc Andorra</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm2">
     <span class="saat">14:00</span>
-    <span class="takimlar">Magdeburg - Karlsruhe</span>
+    <span class="takimlar">Marsilya - Le Havre</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint3">
+    <span class="saat">14:30</span>
+    <span class="takimlar">Braunschweig - Paderborn</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint2">
+    <span class="saat">14:30</span>
+    <span class="takimlar">Holstein Kiel - Elversberg</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb4">
-    <span class="saat">14:00</span>
-    <span class="takimlar">Wehen - Hamburg</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb3">
     <span class="saat">14:30</span>
-    <span class="takimlar">Luton Town - Tottenham</span>
+    <span class="takimlar">Schalke 04 - Hertha Berlin</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss">
     <span class="saat">15:00</span>
-    <span class="takimlar">Cadiz - Girona</span>
+    <span class="takimlar">Villarreal - Las Palmas</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb5">
     <span class="saat">15:30</span>
-    <span class="takimlar">Büyükçekmece - Türk Telekom</span>
+    <span class="takimlar">Çağdaş Bodrum - Anadolu Efes</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint1">
     <span class="saat">15:30</span>
-    <span class="takimlar">Y.Watanuki - T.Fritz</span>
+    <span class="takimlar">Z.Zhang - B. Nakashima</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinex1">
+    <span class="saat">15:30</span>
+    <span class="takimlar">Ajax - AZ Alkmaar</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb3">
+    <span class="saat">16:00</span>
+    <span class="takimlar">Brighton - Liverpool</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm2">
+    <span class="saat">16:00</span>
+    <span class="takimlar">West Ham - Newcastle</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss2">
     <span class="saat">16:00</span>
-    <span class="takimlar">Inter - Bologna</span>
+    <span class="takimlar">Lazio - Atalanta</span>
     <span class="lig">STSL</span>
 </div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint1">
-    <span class="saat">16:30</span>
-    <span class="takimlar">Augsburg - Darmstadt 98</span>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm1">
+    <span class="saat">16:00</span>
+    <span class="takimlar">Adanaspor - Giresunspor</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb4">
     <span class="saat">16:30</span>
-    <span class="takimlar">B.Dortmund - Union Berlin</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint2">
-    <span class="saat">16:30</span>
-    <span class="takimlar">Leipzig - Bochum</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayint3">
-    <span class="saat">16:30</span>
-    <span class="takimlar">Stuttgart - Wolfsburg</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm1">
-    <span class="saat">17:00</span>
-    <span class="takimlar">Burnley - Chelsea</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm2">
-    <span class="saat">17:00</span>
-    <span class="takimlar">Fulham - Sheffield United</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb3">
-    <span class="saat">17:00</span>
-    <span class="takimlar">Manchester Utd - Brentford</span>
+    <span class="takimlar">Bayer Leverkusen - Köln</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss">
     <span class="saat">17:15</span>
-    <span class="takimlar">Real Madrid - Osasuna</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb5">
-    <span class="saat">18:00</span>
-    <span class="takimlar">Bursaspor - Darüşşafaka</span>
+    <span class="takimlar">Atletico Madrid - Real Sociedad</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayintv85">
-    <span class="saat">18:00</span>
-    <span class="takimlar">Al Akhdoud - Al Hilal</span>
+    <span class="saat">17:45</span>
+    <span class="takimlar">Sparta Rotterdam - PSV</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb4">
+    <span class="saat">18:30</span>
+    <span class="takimlar">Bayern Münih - Freiburg</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb3">
+    <span class="saat">18:30</span>
+    <span class="takimlar">Arsenal - Manchester City</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss2">
     <span class="saat">19:00</span>
-    <span class="takimlar">Juventus - Torino</span>
+    <span class="takimlar">Cagliari - Roma</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm1">
     <span class="saat">19:00</span>
-    <span class="takimlar">Eyüpspor - Bodrumspor</span>
+    <span class="takimlar">Altay - Ümraniyespor</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinsms2">
+    <span class="saat">19:30</span>
+    <span class="takimlar">Basquet Girona - Real Madrid</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinsmarts">
-    <span class="saat">19:00</span>
-    <span class="takimlar">Manresa - Zaragoza</span>
+    <span class="saat">20:00</span>
+    <span class="takimlar">Porto - Portimonense</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb4">
-    <span class="saat">19:30</span>
-    <span class="takimlar">Werder Bremen - Hoffenheim</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb3">
-    <span class="saat">19:30</span>
-    <span class="takimlar">Crystal Palace - Nottingham Forest</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinbm2">
-    <span class="saat">20:00</span>
-    <span class="takimlar">St. Etienne - Ajaccio</span>
+    <span class="saat">20:30</span>
+    <span class="takimlar">Eintracht Frankfurt - Heidenheim</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb5">
-    <span class="saat">21:30</span>
-    <span class="takimlar">St.Pauli - Nürnberg</span>
+    <span class="saat">20:30</span>
+    <span class="takimlar">Beşiktaş Emlakjet - Tofaş</span>
+    <span class="lig">STSL</span>
+</div>
+<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb3">
+    <span class="saat">21:45</span>
+    <span class="takimlar">Rennes - PSG</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss2">
     <span class="saat">21:45</span>
-    <span class="takimlar">Genoa - Milan</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinb4">
-    <span class="saat">22:00</span>
-    <span class="takimlar">Reims - Monaco</span>
+    <span class="takimlar">Napoli - Fiorentina</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinss">
     <span class="saat">22:00</span>
-    <span class="takimlar">Sevilla - Rayo Vallecano</span>
-    <span class="lig">STSL</span>
-</div>
-<div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinex1">
-    <span class="saat">22:00</span>
-    <span class="takimlar">Vitesse - Excelsior</span>
+    <span class="takimlar">Granada - Barcelona</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinsms2">
-    <span class="saat">22:30</span>
-    <span class="takimlar">San Lorenzo - Newell's Old Boys</span>
+    <span class="saat">22:00</span>
+    <span class="takimlar">Fluminense - Botafogo RJ</span>
     <span class="lig">STSL</span>
 </div>
 <div class="mac iframeYayin" data-url="//cam24xd.pages.dev/channel.html?id=yayinsmarts">
     <span class="saat">22:30</span>
-    <span class="takimlar">Estoril - Benfica</span>
+    <span class="takimlar">Sporting Lisbon - Arouca</span>
     <span class="lig">STSL</span>
 </div>
+
 </div>
 <div class="macListe" id="basketball" style="display: none;">
 
