--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@ border-radius:4px;
 
 <h1>- Canlı maç izle | Taraftarium24 - Taraftarium - Maç izle</h1>
 
- <amp-iframe allowfullscreen="" allowtransparency="" frameborder="0" height="300" scrolling="no" src="https://banagonder.cfd/live/izle/stream1.html" width="auto" layout="fixed-height" sandbox="allow-downloads allow-forms allow-modals allow-orientation-lock allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-presentation allow-same-origin allow-scripts allow-top-navigation-by-user-activation" style="height:300px"><span placeholder="" class="amp-wp-iframe-placeholder"></span><noscript><iframe name="ekrani" frameborder="0" height="300" scrolling="no" src="https://lisinoprilgeneric.co/albturk/izle/ch7.html" width="100%"></iframe></noscript></amp-iframe>
+ <amp-iframe allowfullscreen="" allowtransparency="" frameborder="0" height="300" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="auto" layout="fixed-height" sandbox="allow-downloads allow-forms allow-modals allow-orientation-lock allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-presentation allow-same-origin allow-scripts allow-top-navigation-by-user-activation" style="height:300px"><span placeholder="" class="amp-wp-iframe-placeholder"></span><noscript><iframe name="ekrani" frameborder="0" height="300" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="100%"></iframe></noscript></amp-iframe>
     
         <a href="/streams/stream-24.html" target="_blank">
             <div class="sportrgool">
