--- a/index.html
+++ b/index.html
@@ -205,16 +205,16 @@ clear:both;
 border-radius:0px;
 -moz-border-radius:0px;
 -webkit-border-radius:0px;
-background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00ff11), to(#00ff11)) ;
-background-image: -moz-linear-gradient(100% 100% 90deg, #00ff11, #00ff11) ;
+background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF6138), to(#FF6138)) ;
+background-image: -moz-linear-gradient(100% 100% 90deg, #FF6138, #FF6138) ;
 border-left: 4px solid #000000;
 border-right: 4px solid #000000;
 font-weight:500;
 
 }
 .sportrgool:hover {
-background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00ff11), to(#00ff11)) ;
-background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00ff11), to(#00ff11)) ;
+background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF6138), to(#FF6138)) ;
+background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF6138), to(#FF6138)) ;
 }
 .sportrgoolreklam {
 text-align:left;
@@ -557,7 +557,7 @@ border-radius:4px;
 		font-style:normal
 	}
 	body {
-	background-color:#05204F;
+	background-color:#FFFF9D;
 	}
 	.jackpot-prize {
 		position:absolute;
@@ -735,7 +735,7 @@ border-radius:4px;
 		}
 	}
 	body {
-		background-color:#05204F
+		background-color:#FFFF9D
 	}
 	.logo-container {
 
@@ -746,7 +746,7 @@ border-radius:4px;
     text-align: left;
     overflow: hidden;
     margin: 0 auto;
-    background: #FFFF00;
+    background: #FF6138;
 	}
 	.site-menu {
 		background-color:#070707
@@ -853,7 +853,7 @@ border-radius:4px;
 	}
 	@media(min-width:768px) {
 		body {
-			background-color: #05204F
+			background-color: #FFFF9D
 		}
 	}
 	.kelapkelip {
@@ -936,7 +936,7 @@ border-radius:4px;
 
 <h1>- Canlı maç izle | Taraftarium24 - Taraftarium - Maç izle</h1>
 
- <amp-iframe allowfullscreen="" allowtransparency="" frameborder="0" height="300" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="auto" layout="fixed-height" sandbox="allow-downloads allow-forms allow-modals allow-orientation-lock allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-presentation allow-same-origin allow-scripts allow-top-navigation-by-user-activation" style="height:300px"><span placeholder="" class="amp-wp-iframe-placeholder"></span><noscript><iframe name="ekrani" frameborder="0" height="300" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="100%"></iframe></noscript></amp-iframe>
+ <amp-iframe allowfullscreen="" allowtransparency="" frameborder="0" height="500" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="auto" layout="fixed-height" sandbox="allow-downloads allow-forms allow-modals allow-orientation-lock allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-presentation allow-same-origin allow-scripts allow-top-navigation-by-user-activation" style="height:300px"><span placeholder="" class="amp-wp-iframe-placeholder"></span><noscript><iframe name="ekrani" frameborder="0" height="300" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="100%"></iframe></noscript></amp-iframe>
     
         <a href="/index.html target="_blank">
             <div class="sportrgool">
