--- a/index.html
+++ b/index.html
@@ -935,10 +935,12 @@ border-radius:4px;
 
 
 <h1>- Canlı maç izle | Taraftarium24 - Taraftarium - Maç izle</h1>
-
+<a href="https://sites.google.com/view/iptvold" target="alt">
+    <img src="https://i.imgur.com/464gtwm.jpg" alt="İlgili görsel" />
+</a>
  <amp-iframe allowfullscreen="" allowtransparency="" frameborder="0" height="500" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="auto" layout="fixed-height" sandbox="allow-downloads allow-forms allow-modals allow-orientation-lock allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-presentation allow-same-origin allow-scripts allow-top-navigation-by-user-activation" style="height:300px"><span placeholder="" class="amp-wp-iframe-placeholder"></span><noscript><iframe name="ekrani" frameborder="0" height="300" scrolling="no" src="https://tarafxd1.pages.dev/channel?id=yayinstar" width="100%"></iframe></noscript></amp-iframe>
     
-        <a href="/index.html target="_blank">
+        <a href="/index.html target="alt">
             <div class="sportrgool">
                 <i class="sportrgooltime">19:00</i> Pendikspor - Fenerbahçe
                 	<i class="vid-onlyDesktop" style="float:right; margin-right:10px;margin-top:4px; font-size:9px; ">Süper Lig</i>
